# CUDA-NN

./: .gitignore  CMakeLists.txt  common.h  conv.cu  conv.cuh  custom_cuda_layer.cpp  custom_cuda_layer.cu  dense.cu  dense.cuh  layer.cuh  main.cu  maxpooling.cu  maxpooling.cuh  network.cu  network.cuh  readme.md  setup.py
test/: CMakeLists.txt  conv_test.cu  cublas_test.cu  cudnn_test.cu  dense_test.cu  maxpooling_test.cu  network_test.cu
